# mini_tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SETUP_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
mini_binary/: __init__.py  mini_read_elf.py
mini_ir/: demo.py
mini_js/: demo.js  demo.py
mini_jsvmp/: example.js  immediate_encryption_demo.md  mini_jsvmp.js  readme.md  status.md  test_examples.js
mini_jvm/: runtime.py  test_runtime.py
mini_linker/: __init__.py  mini_read_elf.py  test_elf_parser.py
minic/: __init__.py  codegen.py  driver.py  lexer.py  parser.py  readme.md  runtime.py  script.md
minic/test/: demo_v2.py  example.py  minic_test.py  test_compiler.py
minit_tls/cryptor/: aes_encrypt_craft.py  md5_craft.py  sha256_craft.py
minit_tls/example/: ecdhe_demo.py
minit_tls/network/: mini_ecdhe.py  mini_tls.py
minit_tls/test/: test_mini_ecdhe.py
test/: test_mini_ecdhe.py
test/minic/: example.py
test/minic/examples/: add.mc
